Rename subcategory to category
