# api/app/signals/apps/signals/v0/views.py
@@ -123,7 +123,7 @@ class SignalAuthViewSet(DatapuntViewSet):
         'created_at',
         'updated_at',
         'stadsdeel',
-        'sub_category',
+        'category',
         'main_category',
         'status',
         'priority',
@@ -134,8 +134,8 @@ class SignalAuthViewSet(DatapuntViewSet):
         'created_at': 'created_at',
         'updated_at': 'updated_at',
         'stadsdeel': 'location__stadsdeel',
-        'sub_category': 'category_assignment__sub_category__slug',
-        'main_category': 'category_assignment__sub_category__main_category__slug',
+        'category': 'category_assignment__category__slug',
+        'main_category': 'category_assignment__category__main_category__slug',
         'status': 'status__state',
         'priority': 'priority__priority',
         'address': 'location__address_text',
